1. 修改网站图标；2. 更改图片存放路径；3.  修改页脚版权标识和主题标识；4. 修改网站配色为Catppuccin，删除主题切换按钮，添加知乎链接；5. 修复Corner detection文章少量错误；6. 新增TheiaSfM0、1两篇文章。

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,6 +48,9 @@
       >Chirpy</a>
     {%- endcapture -%}
 
-    {{ site.data.locales[include.lang].meta | replace: ':PLATFORM', _platform | replace: ':THEME', _theme }}
+    {%- capture _palette -%}
+      <a href="https://Catppuccin.com" target="_blank" rel="noopener">Catppuccin</a>
+    {%- endcapture -%}
+    {{ site.data.locales[include.lang].meta | replace: ':PLATFORM', _platform | replace: ':THEME', _theme | replace: ':PALETTE', _palette }}
   </p>
 </footer>
