移除对mermaid本地资源的引用

--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -1,5 +1,5 @@
 <!-- mermaid-js loader -->
-<script src="/assets/js/data/mermaid.min.js"></script>
+<!-- <script src="/assets/js/data/mermaid.min.js"></script> -->
 <script type="text/javascript">
   function updateMermaid(event) {
     if (event.source === window && event.data && event.data.direction === ModeToggle.ID) {
